# zerveAI_learning

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: demo_assess.py  train_model.py
src/caresignal/: __init__.py  api.py  data.py  features.py  inference.py  train.py
